Blink LED2 and set LED1 light

--- a/blinky_blinky/blinky_blinky.ioc
+++ b/blinky_blinky/blinky_blinky.ioc
@@ -13,10 +13,11 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PB14
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.Pin2=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=3
+Mcu.Pin0=PA5
+Mcu.Pin1=PB14
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.Pin3=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -34,8 +35,12 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED1
+PA5.Locked=true
+PA5.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LED
+PB14.GPIO_Label=LED2
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -69,7 +74,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -124,7 +129,7 @@ RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=2000
+TIM2.Period=500
 TIM2.Prescaler=40000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
