DMA functionality with DAC

--- a/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
+++ b/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
@@ -2,17 +2,32 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+DAC1.DAC_SampleAndHold-DAC_OUT1=DAC_SAMPLEANDHOLD_DISABLE
+DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T2_TRGO
+DAC1.IPParameters=DAC_Trigger-DAC_OUT1,DAC_SampleAndHold-DAC_OUT1
+Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC_CH1.0.Instance=DMA1_Channel3
+Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
+Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
+Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=DAC_CH1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L475VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=DAC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IPNb=5
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IPNb=6
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
@@ -27,6 +42,7 @@ Mcu.UserName=STM32L475VGTx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -79,7 +95,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DAC1_Init-DAC1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
