--- a/testMic/testMic.ioc
+++ b/testMic/testMic.ioc
@@ -2,69 +2,48 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-DAC1.DAC_SampleAndHold-DAC_OUT1=DAC_SAMPLEANDHOLD_DISABLE
-DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T2_TRGO
-DAC1.IPParameters=DAC_Trigger-DAC_OUT1,DAC_SampleAndHold-DAC_OUT1
 DFSDM1.Divider=40
 DFSDM1.DmaMode_reg_FIL0=ENABLE
 DFSDM1.FastMode_reg_FIL0=ENABLE
 DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_2
 DFSDM1.Fosr_FIL0=250
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,Divider
-Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.DAC_CH1.0.Instance=DMA1_Channel3
-Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
-Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
-Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.DFSDM1_FLT0.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DFSDM1_FLT0.1.Instance=DMA1_Channel4
-Dma.DFSDM1_FLT0.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DFSDM1_FLT0.1.MemInc=DMA_MINC_ENABLE
-Dma.DFSDM1_FLT0.1.Mode=DMA_CIRCULAR
-Dma.DFSDM1_FLT0.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DFSDM1_FLT0.1.PeriphInc=DMA_PINC_DISABLE
-Dma.DFSDM1_FLT0.1.Priority=DMA_PRIORITY_LOW
-Dma.DFSDM1_FLT0.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=DAC_CH1
-Dma.Request1=DFSDM1_FLT0
-Dma.RequestsNb=2
+DFSDM1.IPParameters=Divider,Filter_regChannel_FIL0,SincOrder_FIL0,Fosr_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0
+DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
+Dma.DFSDM1_FLT0.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DFSDM1_FLT0.0.Instance=DMA1_Channel4
+Dma.DFSDM1_FLT0.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DFSDM1_FLT0.0.MemInc=DMA_MINC_ENABLE
+Dma.DFSDM1_FLT0.0.Mode=DMA_CIRCULAR
+Dma.DFSDM1_FLT0.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DFSDM1_FLT0.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DFSDM1_FLT0.0.Priority=DMA_PRIORITY_LOW
+Dma.DFSDM1_FLT0.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=DFSDM1_FLT0
+Dma.RequestsNb=1
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L475VGT6
 Mcu.Family=STM32L4
-Mcu.IP0=DAC1
-Mcu.IP1=DFSDM1
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IPNb=7
+Mcu.IP0=DFSDM1
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IPNb=5
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PC13
-Mcu.Pin1=PA4
-Mcu.Pin2=PE7
-Mcu.Pin3=PE9
-Mcu.Pin4=PB14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin0=PE7
+Mcu.Pin1=PE9
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.PinsNb=3
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -73,17 +52,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-PA4.Signal=COMP_DAC11_group
-PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LED
-PB14.Locked=true
-PB14.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=BLUE_BUTTON
-PC13.Locked=true
-PC13.Signal=GPXTI13
+PE7.Locked=true
 PE7.Signal=S_DATAIN2DFSDM1
 PE9.Locked=true
 PE9.Signal=S_CKOUTDFSDM1
@@ -108,8 +78,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Timers_Interrupts_DMA_and_DFSDM.ioc
-ProjectManager.ProjectName=Timers_Interrupts_DMA_and_DFSDM
+ProjectManager.ProjectFileName=testMic.ioc
+ProjectManager.ProjectName=testMic
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -118,13 +88,12 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
 RCC.APB1TimFreq_Value=80000000
 RCC.APB2Freq_Value=80000000
-RCC.APB2TimCLKDivider=1
 RCC.APB2TimFreq_Value=80000000
 RCC.CortexFreq_Value=80000000
 RCC.DFSDMFreq_Value=80000000
@@ -136,12 +105,11 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=80000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimCLKDivider,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
 RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=80000000
 RCC.MSI_VALUE=4000000
@@ -173,22 +141,12 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
-SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
-SH.COMP_DAC11_group.ConfNb=1
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
 SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,PDM_SPI_input_from_ch2_and_internal_clock
-SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,CKOUT
-SH.S_CKOUTDFSDM1.ConfNb=2
+SH.S_CKOUTDFSDM1.ConfNb=1
 SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
 SH.S_DATAIN2DFSDM1.ConfNb=1
-TIM2.IPParameters=TIM_MasterOutputTrigger,Period
-TIM2.Period=1814
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=B-L475E-IOT01A2
 boardIOC=true
 isbadioc=false
