--- a/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
+++ b/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
@@ -3,14 +3,15 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_SampleAndHold-DAC_OUT1=DAC_SAMPLEANDHOLD_DISABLE
-DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T2_TRGO
+DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_NONE
 DAC1.IPParameters=DAC_Trigger-DAC_OUT1,DAC_SampleAndHold-DAC_OUT1
 DFSDM1.Divider=40
 DFSDM1.DmaMode_reg_FIL0=ENABLE
 DFSDM1.FastMode_reg_FIL0=ENABLE
 DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_2
 DFSDM1.Fosr_FIL0=250
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,Divider
+DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,Divider,SincOrder_FIL0
+DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
 Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC_CH1.0.Instance=DMA1_Channel3
 Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
@@ -44,7 +45,8 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IPNb=7
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
@@ -54,7 +56,8 @@ Mcu.Pin3=PE9
 Mcu.Pin4=PB14
 Mcu.Pin5=VP_SYS_VS_Systick
 Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -74,6 +77,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA4.Signal=COMP_DAC11_group
 PB14.GPIOParameters=GPIO_Label
@@ -182,13 +186,19 @@ SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,CKOUT
 SH.S_CKOUTDFSDM1.ConfNb=2
 SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
 SH.S_DATAIN2DFSDM1.ConfNb=1
-TIM2.IPParameters=TIM_MasterOutputTrigger,Period
+TIM2.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
 TIM2.Period=1814
+TIM2.Prescaler=1
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.IPParameters=Period,Prescaler
+TIM3.Period=1000
+TIM3.Prescaler=40000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=B-L475E-IOT01A2
 boardIOC=true
 isbadioc=false
