Push button, record for 3s, push button, playback functionality

--- a/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
+++ b/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_SampleAndHold-DAC_OUT1=DAC_SAMPLEANDHOLD_DISABLE
-DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_NONE
+DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T2_TRGO
 DAC1.IPParameters=DAC_Trigger-DAC_OUT1,DAC_SampleAndHold-DAC_OUT1
 DFSDM1.Divider=40
 DFSDM1.DmaMode_reg_FIL0=ENABLE
@@ -16,7 +16,7 @@ Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC_CH1.0.Instance=DMA1_Channel3
 Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
+Dma.DAC_CH1.0.Mode=DMA_NORMAL
 Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
@@ -25,7 +25,7 @@ Dma.DFSDM1_FLT0.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.DFSDM1_FLT0.1.Instance=DMA1_Channel4
 Dma.DFSDM1_FLT0.1.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.DFSDM1_FLT0.1.MemInc=DMA_MINC_ENABLE
-Dma.DFSDM1_FLT0.1.Mode=DMA_CIRCULAR
+Dma.DFSDM1_FLT0.1.Mode=DMA_NORMAL
 Dma.DFSDM1_FLT0.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.DFSDM1_FLT0.1.PeriphInc=DMA_PINC_DISABLE
 Dma.DFSDM1_FLT0.1.Priority=DMA_PRIORITY_LOW
@@ -122,7 +122,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -187,7 +187,7 @@ SH.S_CKOUTDFSDM1.ConfNb=2
 SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
 SH.S_DATAIN2DFSDM1.ConfNb=1
 TIM2.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
-TIM2.Period=1814
+TIM2.Period=10000
 TIM2.Prescaler=1
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.IPParameters=Period,Prescaler
