Set PB3 to SYS_JTDO-SWO

--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -12,8 +12,9 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.PinsNb=1
+Mcu.Pin0=PB3 (JTDO-TRACESWO)
+Mcu.Pin1=VP_SYS_VS_Systick
+Mcu.PinsNb=2
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -30,6 +31,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PB3\ (JTDO-TRACESWO).Locked=true
+PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
