enable pb14 for led2

--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -14,10 +14,11 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PB3 (JTDO-TRACESWO)
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.Pin2=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=3
+Mcu.Pin0=PB14
+Mcu.Pin1=PB3 (JTDO-TRACESWO)
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.Pin3=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -34,6 +35,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LED2
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PinOutPanel.RotationAngle=0
@@ -67,7 +72,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
