--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -14,11 +14,12 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PB14
-Mcu.Pin1=PB3 (JTDO-TRACESWO)
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.Pin3=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=4
+Mcu.Pin0=PC13
+Mcu.Pin1=PB14
+Mcu.Pin2=PB3 (JTDO-TRACESWO)
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -41,6 +42,10 @@ PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Locked=true
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=BLUE_BUTTON
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -126,6 +131,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
