--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -2,24 +2,28 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+DAC1.DAC_SampleAndHold-DAC_OUT1=DAC_SAMPLEANDHOLD_DISABLE
+DAC1.IPParameters=DAC_SampleAndHold-DAC_OUT1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L475VGT6
 Mcu.Family=STM32L4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IPNb=4
+Mcu.IP0=DAC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
-Mcu.Pin1=PB14
-Mcu.Pin2=PB3 (JTDO-TRACESWO)
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=5
+Mcu.Pin1=PA4
+Mcu.Pin2=PB14
+Mcu.Pin3=PB3 (JTDO-TRACESWO)
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -37,6 +41,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA4.Locked=true
+PA4.Signal=COMP_DAC11_group
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LED2
 PB14.Locked=true
@@ -132,6 +138,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
+SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
+SH.COMP_DAC11_group.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
