--- a/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
+++ b/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
@@ -16,7 +16,7 @@ Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC_CH1.0.Instance=DMA1_Channel3
 Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.DAC_CH1.0.Mode=DMA_NORMAL
+Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
 Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
@@ -46,7 +46,8 @@ Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
 Mcu.IP7=TIM3
-Mcu.IPNb=8
+Mcu.IP8=TIM4
+Mcu.IPNb=9
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
@@ -57,7 +58,8 @@ Mcu.Pin4=PB14
 Mcu.Pin5=VP_SYS_VS_Systick
 Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin8=VP_TIM4_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -78,6 +80,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA4.Signal=COMP_DAC11_group
 PB14.GPIOParameters=GPIO_Label
@@ -187,18 +190,23 @@ SH.S_CKOUTDFSDM1.ConfNb=2
 SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
 SH.S_DATAIN2DFSDM1.ConfNb=1
 TIM2.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
-TIM2.Period=10000
-TIM2.Prescaler=1
+TIM2.Period=80
+TIM2.Prescaler=125
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.IPParameters=Period,Prescaler
 TIM3.Period=1000
 TIM3.Prescaler=40000
+TIM4.IPParameters=Prescaler,Period
+TIM4.Period=1000
+TIM4.Prescaler=40000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=B-L475E-IOT01A2
 boardIOC=true
 isbadioc=false
