Timer interrupt handler drives DAC

--- a/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
+++ b/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
@@ -3,71 +3,34 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 DAC1.DAC_SampleAndHold-DAC_OUT1=DAC_SAMPLEANDHOLD_DISABLE
-DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T2_TRGO
+DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_NONE
 DAC1.IPParameters=DAC_Trigger-DAC_OUT1,DAC_SampleAndHold-DAC_OUT1
-DFSDM1.Divider=40
-DFSDM1.DmaMode_reg_FIL0=ENABLE
-DFSDM1.FastMode_reg_FIL0=ENABLE
-DFSDM1.Filter_regChannel_FIL0=DFSDM_CHANNEL_2
-DFSDM1.Fosr_FIL0=250
-DFSDM1.IPParameters=Filter_regChannel_FIL0,FastMode_reg_FIL0,DmaMode_reg_FIL0,Fosr_FIL0,Divider,SincOrder_FIL0
-DFSDM1.SincOrder_FIL0=DFSDM_FILTER_SINC3_ORDER
-Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.DAC_CH1.0.Instance=DMA1_Channel3
-Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
-Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DAC_CH1.0.Priority=DMA_PRIORITY_HIGH
-Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.DFSDM1_FLT0.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DFSDM1_FLT0.1.Instance=DMA1_Channel4
-Dma.DFSDM1_FLT0.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DFSDM1_FLT0.1.MemInc=DMA_MINC_ENABLE
-Dma.DFSDM1_FLT0.1.Mode=DMA_NORMAL
-Dma.DFSDM1_FLT0.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DFSDM1_FLT0.1.PeriphInc=DMA_PINC_DISABLE
-Dma.DFSDM1_FLT0.1.Priority=DMA_PRIORITY_LOW
-Dma.DFSDM1_FLT0.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=DAC_CH1
-Dma.Request1=DFSDM1_FLT0
-Dma.RequestsNb=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L475VGT6
 Mcu.Family=STM32L4
 Mcu.IP0=DAC1
-Mcu.IP1=DFSDM1
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IPNb=9
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PA4
-Mcu.Pin2=PE7
-Mcu.Pin3=PE9
-Mcu.Pin4=PB14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin7=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin8=VP_TIM4_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin2=PE9
+Mcu.Pin3=PB14
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -79,8 +42,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA4.Signal=COMP_DAC11_group
 PB14.GPIOParameters=GPIO_Label
@@ -91,7 +52,6 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BLUE_BUTTON
 PC13.Locked=true
 PC13.Signal=GPXTI13
-PE7.Signal=S_DATAIN2DFSDM1
 PE9.Locked=true
 PE9.Signal=S_CKOUTDFSDM1
 PinOutPanel.RotationAngle=0
@@ -125,7 +85,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,3-MX_DAC1_Init-DAC1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -184,29 +144,17 @@ SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
 SH.COMP_DAC11_group.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT,PDM_SPI_input_from_ch2_and_internal_clock
-SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT,CKOUT
+SH.S_CKOUTDFSDM1.0=DFSDM1_CKOUT
+SH.S_CKOUTDFSDM1.1=DFSDM1_CKOUT
 SH.S_CKOUTDFSDM1.ConfNb=2
-SH.S_DATAIN2DFSDM1.0=DFSDM1_DATIN2,PDM_SPI_input_from_ch2_and_internal_clock
-SH.S_DATAIN2DFSDM1.ConfNb=1
 TIM2.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
 TIM2.Period=80
 TIM2.Prescaler=125
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM3.IPParameters=Period,Prescaler
-TIM3.Period=1000
-TIM3.Prescaler=40000
-TIM4.IPParameters=Prescaler,Period
-TIM4.Period=1000
-TIM4.Prescaler=40000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=B-L475E-IOT01A2
 boardIOC=true
 isbadioc=false
