--- a/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
+++ b/Timers_Interrupts_DMA_and_DFSDM/Timers_Interrupts_DMA_and_DFSDM.ioc
@@ -125,7 +125,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DAC1_Init-DAC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_DFSDM1_Init-DFSDM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
