--- a/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
+++ b/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
@@ -17,13 +17,14 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32L475V(C-E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PB10
-Mcu.Pin1=PB11
-Mcu.Pin2=PB6
-Mcu.Pin3=PB7
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin0=PC13
+Mcu.Pin1=PB10
+Mcu.Pin2=PB11
+Mcu.Pin3=PB6
+Mcu.Pin4=PB7
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L475VGTx
@@ -31,6 +32,7 @@ MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -51,6 +53,10 @@ PB6.Signal=USART1_TX
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=BLUE_BUTTON
+PC13.Locked=true
+PC13.Signal=GPXTI13
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -136,6 +142,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=32000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=2000
 TIM2.Prescaler=4000
