Flash read for sensor data

--- a/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
+++ b/I2C_SPI_Peripherals_and_OS/I2C_SPI_Peripherals_and_OS.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=buttonTask,0,128,StartButtonTask,Default,NULL,Dynamic,NULL,NULL;TransmitUARTTas,0,256,StartTransmitUARTTask,Default,NULL,Dynamic,NULL,NULL;ReadSensorTask,0,128,StartReadSensorTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=buttonTask,0,128,StartButtonTask,Default,NULL,Dynamic,NULL,NULL;TransmitUARTTas,0,256,StartTransmitUARTTask,Default,NULL,Dynamic,NULL,NULL;ReadSensorTask,0,256,StartReadSensorTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
@@ -123,7 +123,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
